feat: add msg auto delete
